@@ -15,14 +15,14 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA1
 
 SHA1 65ceb1c25f4b71f2f5040e2e4d86238fc5cc6ce3 Build.PL
-SHA1 f7dc8dff80d2b24a7692cd1c0ddaea674bf7a814 Changes
+SHA1 de637d13b3370d1029383f6c92958b6fb80e6680 Changes
 SHA1 e249f6b035937fd44c1f5b195e9601540c501ec9 MANIFEST
 SHA1 63ed48fa5b27e3248bae4db80c5a18f420bdb1a7 MANIFEST.SKIP
-SHA1 c2bd8f8182e76e675dfdf659c518d62e1008d705 META.yml
-SHA1 09d6404f77f3b5f124a791afe11401b594cd7a0e lib/Method/Signatures.pm
+SHA1 18ae96ccabc5c636c55e78e99138880ca9517f63 META.yml
+SHA1 29b4116f79740c53eaef382fdebe3bd73898383f lib/Method/Signatures.pm
 SHA1 ac6687796e415550e211d720f4b7cfb6d2d09713 t/alias.t
 SHA1 e33a7883ed81c0d510f705d92e5865249ef49a72 t/anon.t
-SHA1 83043c6f0aa1863378ea3605e195643d15d61806 t/attributes.t
+SHA1 56c303e608886e482fe32e63789b85eb0cdf5894 t/attributes.t
 SHA1 4d594ef4bc96d929d1ca8e8672904b7ba684556e t/begin.t
 SHA1 275a69045692e21f963a45121dfd69981295a82c t/caller.t
 SHA1 b78b6666dff6f682a3eaecf32c619705c77e6c30 t/debugger.t
@@ -38,7 +38,7 @@ SHA1 34bffb52545b96e498169bf81076206714dc82f0 t/traits.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Darwin)
 
-iEYEARECAAYFAkjpsP8ACgkQWMohlhD1QyeGGwCeJs0YGz6fhLDNfRetf4+5YUrQ
-ynkAn0qe/HGRR3DHOVLBHrs3DLIOU2Iy
-=25xi
+iEYEARECAAYFAkjsKM8ACgkQWMohlhD1QycUHwCfRtdocMg2g/7r/xj6wJ/XFNIe
+tGQAnArUst8Z7VByh4o44kHZo7jUkAkq
+=AoVp
 -----END PGP SIGNATURE-----
