@@ -1,3 +1,15 @@
+20081007  Tue Oct  7 23:27:19 EDT 2008
+    New Features
+    * Added named parameters.
+
+    Docs
+    * Some documentation on what is not allowed, even if we don't
+      yet check for it.
+    * More thanks!
+    * Add an example and comparision with regular Perl
+    * Add some debugging tips
+
+
 20081006  Mon Oct  6 02:24:36 EDT 2008
     New Features
     * Implemented "is alias", "is ro", "is rw" and "is copy".
